--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -33,8 +33,9 @@ $border-radius: 3px;
         padding: 12px;
         margin-bottom: 10px;
         border-radius: 6px;
-        display: flex;
         flex-direction: row;
+        display: flex;
+        flex-wrap: wrap;
         .name-wrap {
           font-size: 14px;
           flex: 1;
@@ -57,7 +58,6 @@ $border-radius: 3px;
           align-content: baseline;
           .tag-wrap {
             margin: 5px 8px 5px 0;
-            max-height: 20px;
             padding: 5px 30px 5px 9px;
             background-color: #4879ba;
             color: white;
@@ -77,6 +77,17 @@ $border-radius: 3px;
             &.matching-search {
               background-color: orange;
             }
+          }
+        }
+        .tag-placeholder-wrap {
+          flex: 1;
+          display: flex;
+          @media screen and (max-width: 800px) {
+            width: 100%;
+            margin-top: 20px;
+            margin-right: 8px;
+            flex: auto;
+            justify-content: flex-end;
           }
         }
         .tag-placeholder {
