--- a/src/containers/Homepage/Homepage.scss
+++ b/src/containers/Homepage/Homepage.scss
@@ -12,7 +12,7 @@ $border-radius: 3px;
         display: inline-flex;
         .search-icon {
           position: absolute;
-          top: 7px;
+          top: 8px;
           left: 10px;
           svg {
             height: 20px;
@@ -64,7 +64,6 @@ $border-radius: 3px;
             border-radius: 8px;
             position: relative;
             .tag-wrap-text {
-
             }
             .tag-wrap-svg {
               position: absolute;
@@ -99,6 +98,9 @@ $border-radius: 3px;
             height: 19px;
             border-color: black;
           }
+          &.input-disabled {
+            opacity: 0;
+          }
         }
         .tag-add-button {
           button {
@@ -108,6 +110,9 @@ $border-radius: 3px;
             width: 90px;
             color: white;
             background-color: #0b7372;
+          }
+          &.block-button {
+            opacity: 0.7;
           }
         }
       }
